--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-photo-view",
-  "version": "1.5.2",
+  "name": "react-native-photo-view-nevo",
+  "version": "1.5.4",
   "description": "Displaying photos with pinch-to-zoom",
   "main": "index.js",
   "author": {
